--- a/package.json
+++ b/package.json
@@ -37,5 +37,10 @@
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^Components(.*)$": "<rootDir>/src/Components$1"
+    }
   }
 }
