--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,9 @@
   "presets": [
     "react",
     "env"
+  ],
+  "plugins": [
+    "transform-object-rest-spread",
+    "transform-class-properties"
   ]
 }
