--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "test:watch": "jest --watch",
     "lint": "eslint . --ext .js,.jsx",
     "lint:fix": "eslint . --ext .js,.jsx --fix",
-    "start": "webpack-dev-server --mode development --open --hot",
+    "start": "NODE_ENV=development webpack-dev-server --mode development --open --hot",
     "build": "NODE_ENV=production webpack",
-    "prettier": "prettier --write 'src/**/*.js' && prettier --write 'src/**/*.jsx'"
+    "prettier": "prettier --write 'src/**/*'",
+    "prettier:watch": "onchange 'src/**/*' -- npx prettier --write {{changed}}"
   },
   "dependencies": {
+    "babel-eslint": "^8.2.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
@@ -24,7 +26,8 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-thunk": "^2.3.0",
-    "webpack-dotenv-plugin": "^2.0.2"
+    "webpack-dotenv-plugin": "^2.0.2",
+    "redux-logger": "^3.0.6"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
@@ -36,13 +39,13 @@
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react": "^7.9.1",
     "fetch-mock": "^6.4.4",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.0.1",
+    "onchange": "^4.0.0",
     "prettier": "1.13.5",
     "react-testing-library": "^3.1.3",
-    "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.5.1",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
