--- a/.eslintrc
+++ b/.eslintrc
@@ -1,11 +1,17 @@
 {
-  "extends": "airbnb",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    }
+  "extends": ["airbnb", "eslint:recommended", "plugin:react/recommended"],
+  "parser": "babel-eslint",
+  "env": {
+    "browser": true
+  },
+  "globals": {
+    "API_URL": true,
+    "APP_ID": true,
+    "APP_KEY": true
   },
   "rules": {
-    "semi": 0
+    "semi": 0,
+    "import/extensions": 0,
+    "import/no-unresolved": 0
   }
 }
