--- a/package.json
+++ b/package.json
@@ -25,9 +25,9 @@
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
-    "webpack-dotenv-plugin": "^2.0.2",
-    "redux-logger": "^3.0.6"
+    "webpack-dotenv-plugin": "^2.0.2"
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
