--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
     "prop-types": "^15.6.1",
+    "ramda": "^0.25.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "reselect": "^3.0.1",
     "webpack-dotenv-plugin": "^2.0.2"
   },
   "devDependencies": {
