--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
+    "shortid": "^2.2.12",
     "webpack-dotenv-plugin": "^2.0.2"
   },
   "devDependencies": {
