--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "prettier:watch": "onchange 'src/**/*' -- npx prettier --write {{changed}}"
   },
   "dependencies": {
-    "babel-eslint": "^8.2.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
     "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
     "prop-types": "^15.6.1",
@@ -34,27 +32,30 @@
   },
   "devDependencies": {
     "babel-core": "^6.26.3",
+    "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.19.1",
+    "eslint": "^5.2.0",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
     "fetch-mock": "^6.4.4",
     "html-webpack-plugin": "^3.2.0",
-    "jest": "^23.0.1",
+    "jest": "^23.4.2",
     "onchange": "^4.0.0",
     "prettier": "1.13.5",
-    "react-testing-library": "^3.1.3",
+    "react-testing-library": "^4.1.5",
     "redux-mock-store": "^1.5.1",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
   },
   "jest": {
+    "testURL": "http://localhost",
     "automock": false,
     "moduleNameMapper": {
       "^Components(.*)$": "<rootDir>/src/Components$1",
