--- a/.babelrc
+++ b/.babelrc
@@ -4,7 +4,10 @@
     "env"
   ],
   "plugins": [
-    "transform-object-rest-spread",
-    "transform-class-properties"
+    "emotion",
+    "transform-runtime",
+    "transform-class-properties",
+    "transform-async-to-generator",
+    "transform-object-rest-spread"
   ]
 }
