--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "prettier:watch": "onchange 'src/**/*' -- npx prettier --write {{changed}}"
   },
   "dependencies": {
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
     "prop-types": "^15.6.1",
@@ -23,6 +25,7 @@
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-redux": "^5.0.7",
+    "react-spinners": "^0.3.3",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -38,7 +41,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^5.2.0",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
@@ -64,7 +67,9 @@
     "globals": {
       "API_URL": "",
       "APP_ID": "",
-      "APP_KEY": ""
+      "APP_KEY": "",
+      "GOOGLE_SEARCH_KEY": "",
+      "GOOGLE_SEARCH_ENGINE": ""
     }
   }
 }
