--- a/package.json
+++ b/package.json
@@ -16,8 +16,6 @@
     "prettier:watch": "onchange 'src/**/*' -- npx prettier --write {{changed}}"
   },
   "dependencies": {
-    "babel-plugin-transform-async-to-generator": "^6.24.1",
-    "babel-plugin-transform-runtime": "^6.23.0",
     "isomorphic-fetch": "^2.2.1",
     "keymirror": "^0.1.1",
     "prop-types": "^15.6.1",
@@ -34,25 +32,36 @@
     "webpack-dotenv-plugin": "^2.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^9.1.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
+    "babel-plugin-transform-async-to-generator": "^6.24.1",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "bulma": "^0.7.1",
+    "css-loader": "^1.0.0",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.9.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "fetch-mock": "^6.4.4",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^23.4.2",
+    "jest-dom": "^1.12.0",
+    "node-sass": "^4.9.2",
     "onchange": "^4.0.0",
+    "postcss-loader": "^2.1.6",
     "prettier": "1.13.5",
     "react-testing-library": "^4.1.5",
     "redux-mock-store": "^1.5.1",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.22.0",
     "webpack": "^4.10.1",
     "webpack-cli": "^2.1.4",
     "webpack-dev-server": "^3.1.4"
@@ -62,7 +71,9 @@
     "automock": false,
     "moduleNameMapper": {
       "^Components(.*)$": "<rootDir>/src/Components$1",
-      "^utils(.*)$": "<rootDir>/src/utils$1"
+      "^utils(.*)$": "<rootDir>/src/utils$1",
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|sass)$": "<rootDir>/__mocks__/styleMock.js"
     },
     "globals": {
       "API_URL": "",
