--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "redux-thunk": "^2.3.0",
     "reselect": "^3.0.1",
     "shortid": "^2.2.12",
-    "webpack-dotenv-plugin": "^2.0.2"
+    "webpack-dotenv-plugin": "^2.0.2",
+    "autoprefixer": "^9.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^9.1.0",
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.4",
